# home-energy-modelling

./: README.md  pyproject.toml
src/: simulation_clock.py
src/domain/building/: constants.py  enums.py
src/domain/building/aggregates/: building.py
src/domain/building/entities/: __init__.py  building_element.py  zone.py
src/domain/building/services/: ThermalCalculationService.py  __init__.py
src/domain/building/value_objects/: __init__.py  air_change_rate.py  area.py  areal_heat_capacity.py  linear_thermal_transmittance.py  orientation.py  pitch.py  thermal_conductance.py  volume.py
src/domain/climate/value_objects/: humidity.py  precipitation_rate.py  solar_irradiance.py  wind_direction.py  wind_speed.py
src/domain/energy/value_objects/: __init__.py  efficiency.py  energy.py  power.py
src/domain/shared/value_objects/: __init__.py  density.py  flow_rate.py  length.py  pressure.py  specific_heat_capacity.py  temperature.py  thermal_conductivity.py  thermal_resistance.py  thermal_transmittance.py
src/domain/simulation/entities/: simulation_clock.py
src/domain/simulation/value_objects/: __init__.py  simulation_time.py  time_step_duration.py
