[project]
name = "home-energy-modelling"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "Chris Donnelly",email = "chris.d@scene.community"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "isort (>=6.1.0,<7.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true